crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_RXY3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: RXY3
input: "---\n'\n...\n'\n"
diagnostics:
YAML_LEX_UNTERMINATED_QUOTED_SCALAR:unterminated quoted scalar@4..6
cst:
