crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_SBG9.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: SBG9
input: "{a: [b, c], [d, e]: f}\n"
diagnostics:

cst:
DOCUMENT@0..23
  YAML_METADATA_CONTENT@0..23
    YAML_STREAM@0..23
      YAML_DOCUMENT@0..23
        YAML_FLOW_MAP@0..22
          YAML_SCALAR@0..1 "{"
          YAML_FLOW_MAP_ENTRY@1..10
            YAML_FLOW_MAP_KEY@1..3
              YAML_SCALAR@1..2 "a"
              YAML_COLON@2..3 ":"
            YAML_FLOW_MAP_VALUE@3..10
              WHITESPACE@3..4 " "
              YAML_FLOW_SEQUENCE@4..10
                YAML_SCALAR@4..5 "["
                YAML_FLOW_SEQUENCE_ITEM@5..6
                  YAML_SCALAR@5..6 "b"
                YAML_SCALAR@6..7 ","
                WHITESPACE@7..8 " "
                YAML_FLOW_SEQUENCE_ITEM@8..9
                  YAML_SCALAR@8..9 "c"
                YAML_SCALAR@9..10 "]"
          YAML_SCALAR@10..11 ","
          WHITESPACE@11..12 " "
          YAML_FLOW_SEQUENCE@12..18
            YAML_SCALAR@12..13 "["
            YAML_FLOW_SEQUENCE_ITEM@13..14
              YAML_SCALAR@13..14 "d"
            YAML_SCALAR@14..15 ","
            WHITESPACE@15..16 " "
            YAML_FLOW_SEQUENCE_ITEM@16..17
              YAML_SCALAR@16..17 "e"
            YAML_SCALAR@17..18 "]"
          YAML_FLOW_MAP_ENTRY@18..21
            YAML_FLOW_MAP_KEY@18..19
              YAML_COLON@18..19 ":"
            YAML_FLOW_MAP_VALUE@19..21
              WHITESPACE@19..20 " "
              YAML_SCALAR@20..21 "f"
          YAML_SCALAR@21..22 "}"
        NEWLINE@22..23 "\n"
