crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_U44R.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: U44R
input: "map:\n  key1: \"quoted1\"\n   key2: \"bad indentation\"\n"
diagnostics:
YAML_PARSE_UNEXPECTED_INDENT:block collection cannot follow a scalar value at a deeper indent@26..27
cst:
