crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_W4TN.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: W4TN
input: "%YAML 1.2\n--- |\n%!PS-Adobe-2.0\n...\n%YAML 1.2\n---\n# Empty\n...\n"
diagnostics:

cst:
DOCUMENT@0..61
  YAML_METADATA_CONTENT@0..61
    YAML_STREAM@0..61
      YAML_DOCUMENT@0..34
        YAML_SCALAR@0..9 "%YAML 1.2"
        NEWLINE@9..10 "\n"
        YAML_DOCUMENT_START@10..13 "---"
        WHITESPACE@13..14 " "
        YAML_SCALAR@14..31 "|\n%!PS-Adobe-2.0\n"
        YAML_DOCUMENT_END@31..34 "..."
      NEWLINE@34..35 "\n"
      YAML_DOCUMENT@35..60
        YAML_SCALAR@35..44 "%YAML 1.2"
        NEWLINE@44..45 "\n"
        YAML_DOCUMENT_START@45..48 "---"
        NEWLINE@48..49 "\n"
        YAML_COMMENT@49..56 "# Empty"
        NEWLINE@56..57 "\n"
        YAML_DOCUMENT_END@57..60 "..."
      NEWLINE@60..61 "\n"
