crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_W9L4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: W9L4
input: "---\nblock scalar: |\n     \n  more spaces at the beginning\n  are invalid\n"
diagnostics:
YAML_PARSE_UNEXPECTED_INDENT:block scalar leading empty line is more indented than its content@20..21
cst:
