crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_ZCZ6.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: ZCZ6
input: "a: b: c: d\n"
diagnostics:
YAML_PARSE_INVALID_KEY_TOKEN:mapping values are not allowed in this context@3..4
cst:
