crates/panache-parser/tests/snapshots/yaml__yaml_cst_suite_ZL4Z.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 283
expression: snapshot
---
case_id: ZL4Z
input: "---\na: 'b': c\n"
diagnostics:
YAML_PARSE_INVALID_KEY_TOKEN:mapping values are not allowed in this context@7..10
cst:
