crates/panache-parser/tests/snapshots/yaml__yaml_suite_4FJ6.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: 4FJ6
input: "---\n[\n  [ a, [ [[b,c]]: d, e]]: 23\n]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
